# uart

./: .gitignore  CMakeLists.txt  J212.c  beidou.c  config.h  crc.c  device.c  flash.c  gprs.c  gprs.py  gps.c  http.c  make.bat  modbus.c  modbusRTU.c  uart.c  uart_CLO3.c  uart_as_pio.c  uart_drone.c  uart_hubei.c  uart_jiangning.c  uart_kunshan.c  uart_rx.pio  uart_suqian_receiving.c  uart_suqian_sending.c  uart_suzhou.c  uart_test.c  uart_test2.c  uart_test_gprs.c  uart_tibet.c
circuitpython/communication/: readUart485.py
circuitpython/record/: boot.py  code1.py  logger.py  move.bat
circuitpython/uart_test/: code.py
circuitpython/usb_communication/: usbCommunicate.py
common/: handler.c
header/: J212.h  beidou.h  crc.h  device.h  flash.h  gprs.h  gps.h  http.h  modbus.h  modbusRTU.h
header/common/: handler.h
